# aksh-portfolio

./: .gitattributes  .gitignore  .npmrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/admin-dashboard/: package.json
apps/blog-frontend/: package.json
apps/portfolio-frontend/: .gitignore  package.json  tailwind.config.ts
apps/portfolio-frontend/app/: globals.css  layout.tsx  page.tsx
apps/portfolio-frontend/app/Components/: AnimatedBackground.tsx  AppBar.tsx  Appbar.tsx  BlogSection.tsx  Contact.tsx  Education.tsx  Footer.tsx  GitHubContributionGraph.tsx  MyIntro.tsx  NavBar.tsx  NewsLetter.tsx  Projects.tsx  ReachOut.tsx  (+2 more)
apps/portfolio-frontend/lib/: db.ts  github.ts
services/analytics-service/: Cargo.toml
services/analytics-service/src/: main.rs
services/analytics-service/src/api/: Cargo.toml
services/analytics-service/src/api/src/: auth.rs  lib.rs
services/analytics-service/src/api/src/routes/: user.rs
services/analytics-service/src/services/: kafka.rs  mod.rs  redis.rs  ws.rs
services/analytics-service/src/store/: Cargo.toml
services/analytics-service/src/store/migrations/2025-09-22-134055_create_user/: up.sql
services/analytics-service/src/store/migrations/2025-09-22-200000_switch_id_to_uuid/: down.sql  up.sql
services/analytics-service/src/store/src/: config.rs  lib.rs  schema.rs  store.rs
services/analytics-service/src/store/src/models/: user.rs
services/blog-backend/: package-lock.json  package.json  tsconfig.tsbuildinfo
services/blog-backend/prisma/: schema.prisma
services/blog-backend/src/: config.ts  index.ts
services/portfolio-api/: .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
services/portfolio-api/prisma/: schema.prisma
services/portfolio-api/src/: index.ts
(+36 files in other folders)
