[workspace]
resolver = "3"
members = ["src/store", "src/api"]

[package]
name = "analytics-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
chrono = "0.4.42"
deadpool-redis = "0.22.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.28"
rdkafka = "0.38.0"
redis = "0.32.5"
serde = "1.0.225"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
uuid = { version = "1.18.1", features = ["v4", "serde", "fast-rng"] }
# Diesel only needed in store crate; can be kept here or moved. Keeping minimal here.
store = { path = "src/store" }
api = { path = "src/api" }
