[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.1"
store = { path = "../store" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde"] }
